force-app/main/default/objects/All_Field_Types__c/All_Field_Types__c.object-meta.xml
<CustomObject>
    <label>All Field Types</label>
    <nameField>
        <label>All Field Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>All Field Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>