force-app/main/default/objects/All_Field_Types__c/fields/checkbox__c.field-meta.xml
<CustomField>
    <fullName>checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sd</description>
    <inlineHelpText>sadf</inlineHelpText>
    <label>Checkbox</label>
    <type>Checkbox</type>
</CustomField>