force-app/main/default/objects/All_Field_Types__c/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <description>descx</description>
    <inlineHelpText>cdsas</inlineHelpText>
    <label>Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>