force-app/main/default/objects/All_Field_Types__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <description>sad</description>
    <inlineHelpText>csd</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>