force-app/main/default/objects/All_Field_Types__c/fields/datetime__c.field-meta.xml
<CustomField>
    <fullName>datetime__c</fullName>
    <description>sxc</description>
    <inlineHelpText>sxd</inlineHelpText>
    <label>Date time</label>
    <type>DateTime</type>
</CustomField>