force-app/main/default/objects/All_Field_Types__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>cxz</description>
    <inlineHelpText>xs</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>