force-app/main/default/objects/All_Field_Types__c/fields/formulacheckbox__c.field-meta.xml
<CustomField>
    <fullName>formulacheckbox__c</fullName>
    <description>desc</description>
    <formula>$User.IsActive</formula>
    <inlineHelpText>help</inlineHelpText>
    <label>FormulaCheckbox</label>
    <type>Checkbox</type>
</CustomField>