force-app/main/default/objects/All_Field_Types__c/fields/formulacurrency__c.field-meta.xml
<CustomField>
    <fullName>formulacurrency__c</fullName>
    <description>dec</description>
    <formula>$User.Latitude</formula>
    <inlineHelpText>hrlp</inlineHelpText>
    <label>Formulacurrency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>