force-app/main/default/objects/All_Field_Types__c/fields/formuladate__c.field-meta.xml
<CustomField>
    <fullName>formuladate__c</fullName>
    <description>desc</description>
    <formula>LastActivityDate</formula>
    <inlineHelpText>help</inlineHelpText>
    <label>Formuladate</label>
    <type>Date</type>
</CustomField>