force-app/main/default/objects/All_Field_Types__c/fields/formuladatetime__c.field-meta.xml
<CustomField>
    <fullName>formuladatetime__c</fullName>
    <description>desc</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>help</inlineHelpText>
    <label>Formuladatetime</label>
    <type>DateTime</type>
</CustomField>