force-app/main/default/objects/All_Field_Types__c/fields/formulanumber__c.field-meta.xml
<CustomField>
    <fullName>formulanumber__c</fullName>
    <description>desc</description>
    <formula>formulacurrency__c</formula>
    <inlineHelpText>help</inlineHelpText>
    <label>Formulanumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>