force-app/main/default/objects/All_Field_Types__c/fields/formulapercent__c.field-meta.xml
<CustomField>
    <fullName>formulapercent__c</fullName>
    <description>desc</description>
    <formula>formulacurrency__c</formula>
    <inlineHelpText>help</inlineHelpText>
    <label>Formulapercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>