force-app/main/default/objects/All_Field_Types__c/fields/formulatext__c.field-meta.xml
<CustomField>
    <fullName>formulatext__c</fullName>
    <description>desc</description>
    <formula>Name</formula>
    <inlineHelpText>help</inlineHelpText>
    <label>Formulatext</label>
    <type>Text</type>
</CustomField>