force-app/main/default/objects/All_Field_Types__c/fields/geolocation__c.field-meta.xml
<CustomField>
    <fullName>geolocation__c</fullName>
    <description>desc</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>