force-app/main/default/objects/All_Field_Types__c/fields/lookup__c.field-meta.xml
<CustomField>
    <fullName>lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>xscd</description>
    <inlineHelpText>xscd</inlineHelpText>
    <label>Lookup</label>
    <referenceTo>james130__c</referenceTo>
    <relationshipName>All_Field_Types</relationshipName>
    <type>Lookup</type>
</CustomField>