force-app/main/default/objects/All_Field_Types__c/fields/masterdetail__c.field-meta.xml
<CustomField>
    <fullName>masterdetail__c</fullName>
    <description>james134</description>
    <inlineHelpText>James is no 1</inlineHelpText>
    <label>MasterDetail</label>
    <referenceTo>james134__c</referenceTo>
    <relationshipName>All_Field_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>