force-app/main/default/objects/All_Field_Types__c/fields/multiselectpicklist__c.field-meta.xml
<CustomField>
    <fullName>multiselectpicklist__c</fullName>
    <description>wda</description>
    <inlineHelpText>sacdf</inlineHelpText>
    <label>Multiselectpicklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Definitely</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>Cares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>