force-app/main/default/objects/All_Field_Types__c/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <description>wads</description>
    <inlineHelpText>fgd</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>