force-app/main/default/objects/All_Field_Types__c/fields/percent__c.field-meta.xml
<CustomField>
    <fullName>percent__c</fullName>
    <description>fgd</description>
    <inlineHelpText>fdgd</inlineHelpText>
    <label>Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>