force-app/main/default/objects/All_Field_Types__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <description>gfxgx</description>
    <inlineHelpText>gfx</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>