force-app/main/default/objects/All_Field_Types__c/fields/picklist__c.field-meta.xml
<CustomField>
    <fullName>picklist__c</fullName>
    <description>ds</description>
    <inlineHelpText>dsf</inlineHelpText>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Definietly Not</fullName>
            </value>
            <value>
                <fullName>Head Fuck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>