force-app/main/default/objects/All_Field_Types__c/fields/text__c.field-meta.xml
<CustomField>
    <fullName>text__c</fullName>
    <description>dsa</description>
    <inlineHelpText>dsf</inlineHelpText>
    <label>Text</label>
    <length>45</length>
    <type>Text</type>
</CustomField>