force-app/main/default/objects/All_Field_Types__c/fields/text_area_long__c.field-meta.xml
<CustomField>
    <fullName>text_area_long__c</fullName>
    <description>dsf</description>
    <inlineHelpText>vcxbvb</inlineHelpText>
    <label>Text Area Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>