force-app/main/default/objects/All_Field_Types__c/fields/text_area_rich__c.field-meta.xml
<CustomField>
    <fullName>text_area_rich__c</fullName>
    <description>sda</description>
    <inlineHelpText>as</inlineHelpText>
    <label>Text Area Rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>