force-app/main/default/objects/All_Field_Types__c/fields/text_endrypted__c.field-meta.xml
<CustomField>
    <fullName>text_endrypted__c</fullName>
    <description>sdad</description>
    <inlineHelpText>dsa</inlineHelpText>
    <label>Text Endrypted</label>
    <length>45</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>