force-app/main/default/objects/All_Field_Types__c/fields/textarea__c.field-meta.xml
<CustomField>
    <fullName>textarea__c</fullName>
    <description>sd</description>
    <inlineHelpText>xs</inlineHelpText>
    <label>TextArea</label>
    <type>TextArea</type>
</CustomField>