force-app/main/default/objects/All_Field_Types__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <description>sxsd</description>
    <inlineHelpText>dssa</inlineHelpText>
    <label>Time</label>
    <type>Time</type>
</CustomField>