force-app/main/default/objects/All_Field_Types__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <description>sac</description>
    <inlineHelpText>xsac</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>